# idea-rag-backend

./: .example.env  .gitignore  Dockerfile  README.md  docker-compose-dev.yml  docker-compose.yml  pyproject.toml  requirements.txt  run.sh
AI/: FFBM.py  SDM.py
backend/: a.json  auth.py  database.py  dict.json  exceptions.py  logger.py  main.py  models.py  requirements.txt  test.py  명세서.txt
backend/AI/: FFBM.py  SDM.py
schedule/: schedule.py
