[project]
name = "idea-rag-backend"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "bcrypt>=4.3.0",
    "fastapi[standard]>=0.116.1",
    "openai>=1.109.1",
    "passlib>=1.7.4",
    "pymongo>=4.13.2",
    "python-dotenv>=1.1.1",
    "python-jose>=3.5.0",
    "requests>=2.32.4",
    "uvicorn>=0.35.0",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
]
